--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 * {
   margin: 0;
 }
-
+:root {
+  --primary-color: #3f0f40;
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
