--- a/src/Component/Chat/Chat.css
+++ b/src/Component/Chat/Chat.css
@@ -17,14 +17,66 @@
 }
 .chat__channelName > .MuiSvgIcon-root {
   font-size: 1.2rem;
-  margin-left: 10px;
+  margin-left: 5px;
 }
-.chat__headerRight > p {
+.chat__headerRight {
+  display: flex;
+  flex-flow: row wrap;
+}
+.chat__headerRight > p,
+.chat__headerRight > button {
   font-size: 0.9rem;
   display: flex;
   align-items: center;
+  margin-left: 1rem;
+  cursor: pointer;
+  background-color: white;
+  border: none;
+  padding: 0.5rem;
+  border-radius: 10px;
 }
-.chat__headerRight > p > .MuiSvgIcon-root {
+.chat__headerRight > button:hover {
+  background-color: rgb(209, 208, 208);
+}
+.chat__headerRight > p > .MuiSvgIcon-root,
+.chat__headerRight > button > .MuiSvgIcon-root {
   margin-right: 5px !important;
   font-size: 1rem;
+}
+.editModal__section hr {
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  margin: 1rem 0;
+}
+.editModal__section input {
+  width: 90%;
+  font-size: 1.5rem;
+  padding: 0.5rem;
+  margin-top: 0.5rem;
+  
+}
+
+.modal__btns {
+  display: flex;
+  width: 100%;
+  flex-flow: row wrap;
+  justify-content: flex-end;
+  margin: 1rem;
+}
+.modal__btns button {
+  background-color: rgb(0, 102, 255);
+  color: white;
+  font-weight: bold;
+  font-size: 1rem;
+  outline: none;
+  border: 1px solid white;
+  border-radius: 1rem;
+  padding: 0.8rem 1.8rem;
+  margin-right: 1rem;
+  cursor: pointer;
+}
+.modal__btns button:hover {
+  background-color: rgb(2, 91, 224);
+}
+.modal__btns button:disabled {
+  background-color: rgba(2, 91, 224, 0.493);
 }
