--- a/src/Component/Chat/Chat.css
+++ b/src/Component/Chat/Chat.css
@@ -1,8 +1,9 @@
 .chat {
+  position: relative;
   flex: 0.7;
   flex-grow: 1;
-  overflow-y: scroll;
-  padding-bottom: 150px;
+  /* padding-bottom: 150px; */
+  margin-bottom: 4rem;
 }
 .chat__header {
   display: flex;
@@ -10,6 +11,10 @@
   justify-content: space-between;
   padding: 1.25rem;
   border: 1px solid lightgray;
+  position: sticky;
+  top: 0;
+  left: 0;
+  background-color: white;
 }
 .chat__channelName {
   display: flex;
@@ -52,7 +57,6 @@
   font-size: 1.5rem;
   padding: 0.5rem;
   margin-top: 0.5rem;
-  
 }
 
 .modal__btns {
@@ -79,4 +83,9 @@
 }
 .modal__btns button:disabled {
   background-color: rgba(2, 91, 224, 0.493);
+}
+.chat__message__section {
+  /* min-height: 68vh; */
+  max-height: 68vh;
+  overflow-y: auto;
 }
