--- a/src/Component/Login/Login.css
+++ b/src/Component/Login/Login.css
@@ -22,7 +22,7 @@
 }
 
 .login__container > button {
-  margin-top: 50px;
+  margin-top: 2rem;
   text-transform: inherit !important;
   background-color: #0a8d48;
   color: white;
@@ -32,4 +32,29 @@
   border: 1px solid #0a8d48;
   background-color: white;
   color: #0a8d48;
+}
+
+.btn-Google {
+  display: flex;
+  cursor: pointer;
+  justify-content: center;
+  background-color: #fff;
+  align-items: center;
+  padding: 0.3rem 1.2rem;
+  margin: auto;
+  border-radius: 7px;
+  border: 1px solid #0a8d48;
+  box-shadow: inset 0 0 0 1px rgb(0 0 0 / 60%),
+    inset 0 0 0 2px rgb(0 0 0 / 0%) inset 0 0 0 1px rgb(0 0 0 / 0);
+  vertical-align: middle;
+  z-index: 0;
+  transition-duration: 0.3s;
+  font-size: 0.8rem;
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.btn-Google > img {
+  width: 2rem;
+  margin-right: 0.5rem;
 }
