--- a/src/Component/Sidebar/Sidebar.css
+++ b/src/Component/Sidebar/Sidebar.css
@@ -2,6 +2,7 @@
   background-color: var(--primary-color);
   color: white;
   max-width: 260px;
+  min-width: 25%;
   border-top: 1.5px solid #49274b;
   flex: 0.3;
 }
@@ -11,7 +12,7 @@
 }
 .sidebar__header {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-between;
   border-bottom: 1.5px solid #49274b;
   padding: 13px;
@@ -32,20 +33,21 @@
 .sidebar__header__info {
   flex: 1;
 }
-.sidebar__header__info > h2 {
+/* .sidebar__header__info > h2 {
   font-size: 1rem;
   font-weight: 900;
   margin: 0 0 0.4rem 0;
-}
-.sidebar__header__info > h3 {
+} */
+.sidebar__header__info > h2 {
+  cursor: default;
   display: flex;
   align-items: center;
-  font-size: 0.8rem;
-  font-weight: 400;
+  font-size: 1.3rem;
+  font-weight: 900;
 }
 
-.sidebar__header__info > h3 > .MuiSvgIcon-root {
-  font-size: 0.9rem;
+.sidebar__header__info > h2 > .MuiSvgIcon-root {
+  font-size: 1.2rem;
   margin: 1px 2px 0 0;
   color: green;
 }
