--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -7,6 +7,7 @@
   background-color: var(--primary-color);
   padding: 10px 0;
   box-sizing: border-box;
+  width: 100%;
 }
 .header__left {
   flex: 0.3;
